# sudoku

./: CMakeLists.txt  README.md
classic/: CMakeLists.txt  main.cpp
constexpr/: CMakeLists.txt  main.cpp
constexpr_arr/: CMakeLists.txt  main.cpp
qt/: CMakeLists.txt  buffer.cpp  buffer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  solver.cpp  solver.h  sudoku.cpp  sudoku.h  sudokulabel.cpp  sudokulabel.h
